<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Guess Saint</string>

<!--table names-->
    <string name="saints_translation_table_name">saints_default</string>

<!--main screen TODO: get rid of along with the old layout -->
    <string name="score_main_screen" translatable="false">%.0f%%</string>
    <string name="default_high_score_value" translatable="false">0%</string>
    <string name="high_score">best score</string>
    <string name="button_start">Start quiz</string>
    <string name="button_info">List of Saints</string>

<!-- redesigned main screen   -->
    <string name="main_screen_btn_guess_saint">Play</string>
    <string name="main_screen_btn_list_of_saints">List of Saints</string>
    <string name="main_screen_btn_unlocked_paintings">Unlocked Paintings</string>
    <string name="main_screen_pic_desc">Saint Andrew sitting at a table, with his head on the
        hand is reading a book, on the background there\'s a mountain going up and an opening
        with a view to the distance can be seen.
    </string>


<!--menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Send feedback</string>

<!--settings screen-->
    <string name="settings_auto_next">Auto click on Next</string>
    <string name="settings_auto_next_on">New question is shown automatically after clicking Next</string>
    <string name="settings_auto_next_off">You should click Next twice to see next question</string>

    <string name="settings_reset_option_title">Reset answers</string>
    <string name="settings_reset_option_summary">Reset count of correctly answered paintings</string>


    <!--guess saint screen-->
    <string name="score_message">Your score: %.0f%%</string>
    <string name="default_score_message">Your score: 0%</string>
    <string name="answer_correct">Correct!</string>
    <string name="answer_wrong">It was \u0020</string>
    <string name="button_exit">exit</string>
    <string name="button_next">next</string>

    <!--in case db is empty-->
    <string name="empty_view_text">Database seems empty, please, try to reinstall the app. If the problem persists, please, send us a feedback to sadnessexports@gmail.com.</string>
    <string name="empty_view_title_text">Oops, something went wrong…</string>

    <!--in case all pictures are guessed-->
    <string name="guessed_all_paintings_title_text">It seems we ran out of pictures for you to guess…</string>
    <string name="guessed_all_paintings_text">Could it be, that you\'ve guessed them all? Nice Job! Tap reset if you want to see them again.</string>
    <string name="guessed_all_paintings_reset_button">Reset</string>

    
<!--saint info screen-->
    <string name="info_screen_header">Short information</string>
    <string name="saint_info_attributes_list_prefix">Attributes:\u0020</string>
    <string name="view_wiki">read wikipedia article</string>


<!--feedback email-->
    <string name="feedback_request_subject">Guess Saint feedback</string>
    <string name="feedback_request_text">Whether it is a question, feature request, report that a depicted saint is someone else, a bug report or just your thoughts, we will be happy to receive your feedback. Thank you!</string>


<!--dialog reset counters in db-->
    <string name="dialog_reset_db_counters_title">This action can\'t be undone!</string>
    <string name="dialog_reset_db_counters_message">All data about your correct answers will be deleted!</string>
    <string name="dialog_reset_db_confirm">OK</string>
    <string name="dialog_reset_db_cancel">Cancel</string>


<!--toast messages-->
    <string name="no_answer_toast_text">Please, choose your answer first</string>

    <string name="unsupported_action_begining">There is no \u0020</string>
    <string name="unsupported_action_ending">\u0020 app configured. :(</string>
    <string name="unsupported_action_default_text">Something went wrong</string>

    <string name="unsupported_action_name_email">email</string>
    <string name="unsupported_action_name_browser">browser</string>

    <string name="reset_db_done">Done!</string>
    <string name="dialog_unlocked_painting">You have unlocked a new painting!</string>
    <string name="dialog_cancel">see later</string>
    <string name="dialog_show">show now</string>

</resources>
