<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/main_screen_blackbg"
    android:layout_below="@+id/appBar"
    android:layout_alignParentBottom="true"
    >

    <TextView
        android:id="@+id/mainScreenGuessSaintsScoreValue"

        android:text="@string/default_high_score_value"
        android:textStyle="bold"
        android:textSize="60sp"

        android:layout_centerHorizontal="true"
        android:layout_above="@+id/mainScreenGuessSaintsScoreText"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mainScreenGuessSaintsScoreText" />

    <TextView
        android:id="@+id/mainScreenGuessSaintsScoreText"

        android:text="@string/high_score"

        android:textStyle="bold"
        android:textSize="20sp"

        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/mainScreenGuessActivityButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/mainScreenGuessActivityButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mainScreenGuessActivityButton"

        android:text="@string/button_start"

        android:layout_width="250dp"
        android:layout_height="50dp"

        android:layout_centerHorizontal="true"
        android:layout_above="@+id/mainScreenSaintsListActivity"
        app:layout_constraintBottom_toTopOf="@+id/mainScreenSaintsListActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton

      android:id="@+id/mainScreenSaintsListActivity"

        android:text="@string/button_info"

        android:layout_width="250dp"
        android:layout_height="50dp"

        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
