<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--  background pic  -->
    <ImageView
        android:src="@drawable/main_bg"
        android:contentDescription="@string/main_screen_pic_desc"

        android:adjustViewBounds="true"
        android:scaleType="centerCrop"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"

        android:background="@color/transparent"
        android:elevation="1dp"

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
    />

    <!--  "Card" with buttons  -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--   Scrim for the buttons     -->

        <androidx.cardview.widget.CardView
            android:id="@+id/view"

            android:backgroundTint="@color/beige_500_transparent"
            app:cardCornerRadius="@dimen/fab_margin"

            android:layout_marginTop="@dimen/main_card_margins"
            android:layout_marginBottom="@dimen/main_card_margins"

            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainScreenGuessActivityButton"

            android:layout_width="0dp"
            android:layout_height="0dp"
        />

        <!--   Play button     -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainScreenGuessActivityButton"

            android:fontFamily="serif"
            android:textStyle="bold"

            app:iconSize="@dimen/main_screen_icon_big"

            app:icon="@drawable/ic_search_white_96dp"
            app:cornerRadius="16dp"
            android:textAlignment="textStart"

            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/guidelinePicDivider"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/main_screen_btn_guess_saint"

        />

        <!--   Two bottom buttons     -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainScreenSaintsListActivity"

            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:fontFamily="serif"
            android:textStyle="bold"

            app:strokeColor="@color/bordo_accent"
            app:strokeWidth="@dimen/main_btn_border_width"

            app:icon="@drawable/baseline_people_24"
            app:iconGravity="end"
            app:iconSize="@dimen/main_screen_icon_normal"
            app:cornerRadius="8dp"

            app:layout_constraintVertical_chainStyle="packed"

            app:layout_constraintBottom_toTopOf="@+id/paintings"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/mainScreenGuessActivityButton"

            android:translationZ="@dimen/main_btn_z_transl"
            android:layout_marginLeft="@dimen/main_screen_btn_margin_side"
            android:layout_marginRight="@dimen/main_screen_btn_margin_side"
            android:layout_marginTop="@dimen/main_screen_btn_margin"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/main_screen_btn_list_of_saints"
        />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/paintings"

            style="@style/Widget.MaterialComponents.Button.OutlinedButton"

            android:fontFamily="serif"
            android:textStyle="bold"

            app:strokeColor="@color/bordo_accent"
            app:strokeWidth="@dimen/main_btn_border_width"

            app:icon="@drawable/outline_collections_24"
            app:iconSize="@dimen/main_screen_icon_normal"
            app:cornerRadius="8dp"
            app:iconGravity="end"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/mainScreenSaintsListActivity"

            android:translationZ="@dimen/main_btn_z_transl"
            android:layout_marginLeft="@dimen/main_screen_btn_margin_side"
            android:layout_marginRight="@dimen/main_screen_btn_margin_side"
            android:layout_marginBottom="@dimen/main_screen_btn_margin"
            android:layout_marginTop="0dp"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/main_screen_btn_unlocked_paintings"
        />

        <!--    Guidelines    -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePicDivider"

            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@dimen/main_guideline_pic"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

        />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"

            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/main_activity_guideline"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"

            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/main_activity_guideline"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
